# travel-ai-api

./: README.md  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: .gitignore  __init__.py  pyproject.toml  test_main.py
